--- a/hyprland/.config/hypr/config.d/startup.conf
+++ b/hyprland/.config/hypr/config.d/startup.conf
@@ -1,5 +1,4 @@
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
 
-exec-once = waybar
-exec-once = hypridle
+exec-once = waybar & hypridle & hyprpaper
