monitor to scale 1, add audio-scripts and systemd

--- a/hyprland/.config/hypr/config.d/monitor.conf
+++ b/hyprland/.config/hypr/config.d/monitor.conf
@@ -3,8 +3,10 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor = DP-3,3840x2160@60,0x0,1.5
+#monitor = DP-3,3840x2160@60,0x0,1.5
+monitor = DP-3,3840x2160@60,0x0,1
 workspace = name:aoc, monitor:DP-3, default:true
-monitor = HDMI-A-1,2560x1440,2560x0,1
+#monitor = HDMI-A-1,2560x1440,2560x0,1
+monitor = HDMI-A-1,2560x1440,3840x0,1
 workspace = name:viewsonic, monitor:HDMI-A-1
 
