Working on audio scripts

--- a/hyprland/.config/hypr/config.d/bind.conf
+++ b/hyprland/.config/hypr/config.d/bind.conf
@@ -33,6 +33,19 @@ bind = $mainMod, 8, workspace, 8
 bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
 
+# from https://github.com/taylor85345/hyprland-dotfiles/blob/master/hypr/scripts/workspace
+#bind = $mainMod, 1, exec, ~/.config/hypr/scripts/workspace.sh 1
+#bind = $mainMod, 2, exec, ~/.config/hypr/scripts/workspace.sh 2
+#bind = $mainMod, 3, exec, ~/.config/hypr/scripts/workspace.sh 3
+#bind = $mainMod, 4, exec, ~/.config/hypr/scripts/workspace.sh 4
+#bind = $mainMod, 5, exec, ~/.config/hypr/scripts/workspace.sh 5
+#bind = $mainMod, 6, exec, ~/.config/hypr/scripts/workspace.sh 6
+#bind = $mainMod, 7, exec, ~/.config/hypr/scripts/workspace.sh 7
+#bind = $mainMod, 8, exec, ~/.config/hypr/scripts/workspace.sh 8
+#bind = $mainMod, 9, exec, ~/.config/hypr/scripts/workspace.sh 9
+#bind = $mainMod, 0, exec, ~/.config/hypr/scripts/workspace.sh 10
+#bind = $mainMod, w, exec, ~/.config/hypr/scripts/workspace.sh
+
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
 bind = $mainMod SHIFT, 2, movetoworkspace, 2
