Add pipewire, set workspace numbers odd left, even right

--- a/hyprland/.config/hypr/config.d/monitor.conf
+++ b/hyprland/.config/hypr/config.d/monitor.conf
@@ -5,8 +5,20 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
 #monitor = DP-3,3840x2160@60,0x0,1.5
 monitor = DP-3,3840x2160@60,0x0,1
-workspace = name:aoc, monitor:DP-3, default:true
-#monitor = HDMI-A-1,2560x1440,2560x0,1
+workspace = name:aoc, monitor:DP-3
+
+# when scaling is 1.5, need to change the offset to the true-width/scaling value from above
+# monitor = HDMI-A-1,2560x1440,2560x0,1
 monitor = HDMI-A-1,2560x1440,3840x0,1
 workspace = name:viewsonic, monitor:HDMI-A-1
 
+workspace = 1, monitor:DP-3, default:true
+workspace = 3, monitor:DP-3
+workspace = 5, monitor:DP-3
+workspace = 7, monitor:DP-3
+workspace = 9, monitor:DP-3
+workspace = 2, monitor:HDMI-A-1
+workspace = 4, monitor:HDMI-A-1
+workspace = 6, monitor:HDMI-A-1
+workspace = 8, monitor:HDMI-A-1
+workspace = 10, monitor:HDMI-A-1
