--- a/hyprland/.config/hypr/config.d/option.conf
+++ b/hyprland/.config/hypr/config.d/option.conf
@@ -7,7 +7,7 @@
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
     gaps_in = 5
-    gaps_out = 20
+    gaps_out = 10
 
     border_size = 2
 
@@ -16,7 +16,7 @@ general {
     col.inactive_border = rgba(595959aa)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
-    resize_on_border = false
+    resize_on_border = true
 
     # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
     allow_tearing = false
