--- a/hyprland/.config/hypr/config.d/window-rule.conf
+++ b/hyprland/.config/hypr/config.d/window-rule.conf
@@ -24,3 +24,15 @@ windowrule = suppressevent maximize, class:.*
 
 # Fix some dragging issues with XWayland
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+
+windowrule = float, workspace:2
+windowrule = float, workspace:4
+windowrule = float, workspace:6
+windowrule = float, workspace:8
+windowrule = float, workspace:10
+
+windowrule = size <60%,<60% float, workspace:2,class:kitty
+windowrule = size <60%,<60% float, workspace:4,class:kitty
+windowrule = size <60%,<60% float, workspace:6,class:kitty
+windowrule = size <60%,<60% float, workspace:8,class:kitty
+windowrule = size <60%,<60% float, workspace:10,class:kitty
