--- a/hyprland/.config/hypr/config.d/startup.conf
+++ b/hyprland/.config/hypr/config.d/startup.conf
@@ -2,3 +2,4 @@
 # exec-once = waybar & hyprpaper & firefox
 
 exec-once = waybar & hypridle & hyprpaper
+exec-once = hyprctl setcursor Bibata-Modern-Classic 24
