Add setwallpaper.sh to hyprpaper to pick random wallpaper at start

--- a/hyprland/.config/hypr/config.d/startup.conf
+++ b/hyprland/.config/hypr/config.d/startup.conf
@@ -1,5 +1,6 @@
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
 
-exec-once = waybar & hypridle & hyprpaper
+exec-once = waybar & hypridle
 exec-once = hyprctl setcursor Bibata-Modern-Classic 24
+exec = sh -c "if [ -z $(pidof hyprpaper) ] ; then hyprpaper && sleep 1s; $HOME/.local/bin/setwallpaper.sh
