add ATARI800_HOME to bash_mjf, fix running setwallpaper

--- a/hyprland/.config/hypr/config.d/startup.conf
+++ b/hyprland/.config/hypr/config.d/startup.conf
@@ -3,4 +3,4 @@
 
 exec-once = waybar & hypridle
 exec-once = hyprctl setcursor Bibata-Modern-Classic 24
-exec = sh -c "if [ -z $(pidof hyprpaper) ] ; then hyprpaper && sleep 1s; $HOME/.local/bin/setwallpaper.sh
+exec = sh -c "if [ -z $(pidof hyprpaper) ] ; then hyprpaper && sleep 1s; fi; $HOME/.local/bin/setwallpaper.sh"
