--- a/hyprland/.config/hypr/config.d/bind.conf
+++ b/hyprland/.config/hypr/config.d/bind.conf
@@ -15,6 +15,9 @@ bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
+# Full screen
+bind = $mainMod SHIFT, F, fullscreen, 0
+
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, down, movefocus, d
