Update for new PC arch build

--- a/hyprland/.config/hypr/config.d/bind.conf
+++ b/hyprland/.config/hypr/config.d/bind.conf
@@ -8,7 +8,7 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, return, exec, $terminal
 bind = $mainMod, C, killactive,
-bind = $mainMod, M, exit,
+bind = $mainMod SHIFT, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
@@ -71,4 +71,9 @@ bind = $SUPER_SHIFT, l, exec, hyprlock
 bind = $mainMod ALT, B, exec, ~/.local/bin/record-screen.sh # Record region (no sound)
 bind = $mainMod CTRL, B, exec, ~/.local/bin/record-screen.sh --fullscreen # [hidden] Record screen (no sound)
 bind = $mainMod SHIFT, B, exec, ~/.local/bin/record-screen.sh --fullscreen-sound # [hidden] Record screen (with sound)
+
+# Gaming
+bind = $mainMod, G, exec, steam
+bind = $mainMod, B, exec, lutris
+bind = $mainMod, H, exec, heroic
 
