--- a/hyprland/.config/hypr/config.d/monitor.conf
+++ b/hyprland/.config/hypr/config.d/monitor.conf
@@ -4,12 +4,17 @@
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 #monitor = DP-3,3840x2160@60,0x0,1.5
+
+# working for a while, started getting errors when AOC was "on" while booting, but keeping its config here:
 monitor = DP-3,3840x2160@60,0x0,1
-workspace = name:aoc, monitor:DP-3
+#monitor = DP-3,disable
 
 # when scaling is 1.5, need to change the offset to the true-width/scaling value from above
 # monitor = HDMI-A-1,2560x1440,2560x0,1
 monitor = HDMI-A-1,2560x1440,3840x0,1
+#monitor = HDMI-A-1,2560x1440,0x0,1
+
+workspace = name:aoc, monitor:DP-3
 workspace = name:viewsonic, monitor:HDMI-A-1
 
 workspace = 1, monitor:DP-3, default:true
