--- a/hyprland/.config/hypr/config.d/startup.conf
+++ b/hyprland/.config/hypr/config.d/startup.conf
@@ -4,3 +4,6 @@
 exec-once = waybar & hypridle
 exec-once = hyprctl setcursor Bibata-Modern-Classic 24
 exec = sh -c "if [ -z $(pidof hyprpaper) ] ; then hyprpaper && sleep 3s; fi; $HOME/.local/bin/setwallpaper.sh"
+
+# works, but any change to config causes the original "DP-3 disabled" to reload
+#exec-once = sleep 3 && hyprctl keyword monitor "DP-3,3840x2160@60,0x0,1" && hyprctl keyword monitor "HDMI-A-1,2560x1440,3840x0,1"
