--- a/hyprland/.config/hypr/config.d/env.conf
+++ b/hyprland/.config/hypr/config.d/env.conf
@@ -1,3 +1,9 @@
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 env = XDG_PICTURES_DIR,/home/markf/Pictures/screenshots/
+
+env = WLR_DRM_NO_ATOMIC,1
+env = LIBVA_DRIVER_NAME,nvidia
+env = GBM_BACKEND,nvidia-drm
+env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+env = WLR_NO_HARDWARE_CURSORS,1
