--- a/hyprland/.config/hypr/config.d/window-rule.conf
+++ b/hyprland/.config/hypr/config.d/window-rule.conf
@@ -36,3 +36,7 @@ windowrule = size <60%,<60% float, workspace:4,class:kitty
 windowrule = size <60%,<60% float, workspace:6,class:kitty
 windowrule = size <60%,<60% float, workspace:8,class:kitty
 windowrule = size <60%,<60% float, workspace:10,class:kitty
+
+#windowrulev2 = immediate, class:^(steam_app_)(.*)$
+#windowrulev2 = fullscreen, class:^(steam_app_)(.*)$
+#windowrulev2 = workspace 10, class:^(steam_app_)(.*)$
