--- a/pipewire/.config/pipewire/pipewire.conf.d/99-custom-sinks.conf
+++ b/pipewire/.config/pipewire/pipewire.conf.d/99-custom-sinks.conf
@@ -71,6 +71,18 @@ context.objects = [
             monitor.passthrough = true
         }
     }
+    {   # Recorder Sink
+        factory = adapter
+        args = {
+            factory.name = support.null-audio-sink
+            node.name = "recorder_sink"
+            node.description = "Recorder Sink"
+            media.class = Audio/Sink
+            audio.position = [ FL FR ]
+            monitor.channel-volumes = true
+            monitor.passthrough = true
+        }
+    }
     {   # Microphone Input
         factory = adapter
         args = {
