--- a/pipewire/.config/pipewire/pipewire.conf.d/99-custom-sinks.conf
+++ b/pipewire/.config/pipewire/pipewire.conf.d/99-custom-sinks.conf
@@ -105,3 +105,43 @@ context.objects = [
     }
 ]
 
+context.modules = [
+    {   # Discord LoudMax Compressor
+        name = libpipewire-module-filter-chain
+        args = {
+            node.description = "Discord LM Compressor"
+            media.name = "Discord LM Compressor"
+            filter.graph = {
+                nodes = [
+                    {
+                        type = ladspa
+                        name = loudmax
+                        plugin = /usr/lib/ladspa/la_LoudMax64.so
+                        label = ldmx_stereo
+                        control = {
+                            # Threshold - where compression starts
+                            "Threshold" = -19.6323528289795
+                            # Output - final output level
+                            "Output" = -13.235294342041
+                            # Inter-Sample Peaks - 0=off, 1=on
+                            "Inter-Sample Peaks" = 0
+                        }
+                    }
+                ]
+            }
+            capture.props = {
+                node.name = "discord_compressor_input"
+                node.description = "Discord Compressor Input"
+                media.class = Audio/Sink
+                audio.position = [ FL FR ]
+            }
+            playback.props = {
+                node.name = "discord_compressor_output"
+                node.description = "Discord Compressor Output"
+                media.class = Audio/Source
+                audio.position = [ FL FR ]
+            }
+        }
+    }
+]
+
