More audio - master-gain-control.sh script to adjust the master volume in the ladspa plugin

--- a/pipewire/.config/pipewire/pipewire.conf.d/99-custom-sinks.conf
+++ b/pipewire/.config/pipewire/pipewire.conf.d/99-custom-sinks.conf
@@ -103,6 +103,7 @@ context.objects = [
             audio.position = [ FL FR ]
         }
     }
+
 ]
 
 context.modules = [
@@ -120,9 +121,9 @@ context.modules = [
                         label = ldmx_stereo
                         control = {
                             # Threshold - where compression starts
-                            "Threshold" = -19.6323528289795
+                            "Threshold (dB)" = -19.6323528289795
                             # Output - final output level
-                            "Output" = -13.235294342041
+                            "Output (dB)" = -13.235294342041
                             # Inter-Sample Peaks - 0=off, 1=on
                             "Inter-Sample Peaks" = 0
                         }
@@ -138,6 +139,38 @@ context.modules = [
             playback.props = {
                 node.name = "discord_compressor_output"
                 node.description = "Discord Compressor Output"
+                media.class = Audio/Source
+                audio.position = [ FL FR ]
+            }
+        }
+    }
+    {   # Master Gain Control
+        name = libpipewire-module-filter-chain
+        args = {
+            node.description = "Master Gain Control"
+            media.name = "Master Gain Control"
+            filter.graph = {
+                nodes = [
+                    {
+                        type = ladspa
+                        name = gain_plugin
+                        plugin = /usr/lib/ladspa/amp.so
+                        label = amp_stereo
+                        control = {
+                            "Gain" = 1.0
+                        }
+                    }
+                ]
+            }
+            capture.props = {
+                node.name = "master_gain_input"
+                node.description = "Master Gain Input"
+                media.class = Audio/Sink
+                audio.position = [ FL FR ]
+            }
+            playback.props = {
+                node.name = "master_gain_output"
+                node.description = "Master Gain Output"
                 media.class = Audio/Source
                 audio.position = [ FL FR ]
             }
