--- a/hyprland/.config/hypr/config.d/window-rule.conf
+++ b/hyprland/.config/hypr/config.d/window-rule.conf
@@ -25,6 +25,33 @@ windowrule = suppressevent maximize, class:.*
 # Fix some dragging issues with XWayland
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
 
+##############################
+### POPUP/DIALOG FIXES ###
+##############################
+
+# Cursor specific fixes
+windowrulev2 = float, class:^(Xdg-desktop-portal-gtk)$, title:^(Add Folder to Workspace)$
+windowrulev2 = center, class:^(Xdg-desktop-portal-gtk)$, title:^(Add Folder to Workspace)$
+windowrulev2 = size 60% 70%, class:^(Xdg-desktop-portal-gtk)$, title:^(Add Folder to Workspace)$
+
+# Fix for all xdg-desktop-portal-gtk dialogs (used by many apps including Cursor, Chrome, etc.)
+windowrulev2 = float, class:^(Xdg-desktop-portal-gtk)$
+windowrulev2 = center, class:^(Xdg-desktop-portal-gtk)$
+windowrulev2 = bordersize 1, class:^(Xdg-desktop-portal-gtk)$
+windowrulev2 = rounding 5, class:^(Xdg-desktop-portal-gtk)$
+
+# Common file dialog titles - ensure proper sizing
+windowrulev2 = size 60% 70%, class:^(Xdg-desktop-portal-gtk)$, title:^(Open File)$
+windowrulev2 = size 60% 70%, class:^(Xdg-desktop-portal-gtk)$, title:^(Open Folder)$
+windowrulev2 = size 60% 70%, class:^(Xdg-desktop-portal-gtk)$, title:^(Save File)$
+windowrulev2 = size 60% 70%, class:^(Xdg-desktop-portal-gtk)$, title:^(Save As)$
+windowrulev2 = size 60% 70%, class:^(Xdg-desktop-portal-gtk)$, title:^(Select.*File)$
+windowrulev2 = size 60% 70%, class:^(Xdg-desktop-portal-gtk)$, title:^(Select.*Folder)$
+
+##############################
+### WORKSPACE RULES ###
+##############################
+
 windowrule = float, workspace:2
 windowrule = float, workspace:4
 windowrule = float, workspace:6
@@ -37,6 +64,38 @@ windowrule = size <60%,<60% float, workspace:6,class:kitty
 windowrule = size <60%,<60% float, workspace:8,class:kitty
 windowrule = size <60%,<60% float, workspace:10,class:kitty
 
-#windowrulev2 = immediate, class:^(steam_app_)(.*)$
-#windowrulev2 = fullscreen, class:^(steam_app_)(.*)$
-#windowrulev2 = workspace 10, class:^(steam_app_)(.*)$
+##############################
+### GAMING
+##############################
+
+windowrule = float, class:^(net.lutris.Lutris)$
+windowrule = move 10% 10%, class:^(net.lutris.Lutris)$
+windowrule = size 50% 60%, class:^(net.lutris.Lutris)$
+windowrule = rounding 5, class:^(net.lutris.Lutris)$
+windowrule = bordersize 1, class:^(net.lutris.Lutris)$
+windowrule = workspace 2, class:^(net.lutris.Lutris)$
+
+windowrule = float, class:^(steam)$, title:^(Steam)$
+windowrule = center, class:^(steam)$, title:^(Steam)$
+windowrule = size 66% 77%, class:^(steam)$, title:^(Steam)$
+windowrule = rounding 5, class:^(steam)$, title:^(Steam)$
+windowrule = bordersize 1, class:^(steam)$, title:^(Steam)$
+windowrule = workspace 2, class:^(steam)$, title:^(Steam)$
+
+# Specific rule for Battle.net - don't fullscreen
+windowrulev2 = float, class:^(steam_app_default)$, title:^(Battle\.net)$
+windowrulev2 = center, class:^(steam_app_default)$, title:^(Battle\.net)$
+windowrulev2 = size 66% 77%, class:^(steam_app_default)$, title:^(Battle\.net)$
+windowrulev2 = rounding 5, class:^(steam_app_default)$, title:^(Battle\.net)$
+windowrulev2 = bordersize 1, class:^(steam_app_default)$, title:^(Battle\.net)$
+windowrulev2 = workspace 2, class:^(steam_app_default)$, title:^(Battle\.net)$
+
+# Battle.net intermediate windows - only set workspace, let them behave naturally
+windowrulev2 = workspace 2, class:^(steam_app_default)$, title:^$
+windowrulev2 = workspace 2, class:^(steam_app_default)$, title:^(Battle\.net Login)$
+
+# General steam_app rules (excluding Battle.net related windows)
+windowrulev2 = immediate, class:^(steam_app_)(.*)$, title:negative:^(Battle\.net|Battle\.net Login|)$
+windowrulev2 = fullscreen, class:^(steam_app_)(.*)$, title:negative:^(Battle\.net|Battle\.net Login|)$
+windowrulev2 = workspace 1, class:^(steam_app_)(.*)$, title:negative:^(Battle\.net|Battle\.net Login|)$
+
