--- a/hypridle/.config/hypr/hypridle.conf
+++ b/hypridle/.config/hypr/hypridle.conf
@@ -5,7 +5,7 @@ general {
 }
 
 listener {
-    timeout = 550                                # 8min.
+    timeout = 550                                # 10 mins - 10 secs
     #on-timeout = brightnessctl -s set 10         # set monitor backlight to minimum, avoid 0 on OLED monitor.
     #on-resume = brightnessctl -r                 # monitor backlight restor.
 }
@@ -16,7 +16,7 @@ listener {
 }
 
 listener {
-    timeout = 605                                 # 10min - 10sec
+    timeout = 605                                 # 10min + 5 secs
     on-timeout = hyprctl dispatch dpms off        # screen off when timeout has passed
     on-resume = hyprctl dispatch dpms on          # screen on when activity is detected after timeout has fired.
 }
