--- a/hyprland/.config/hypr/config.d/bind.conf
+++ b/hyprland/.config/hypr/config.d/bind.conf
@@ -48,6 +48,9 @@ bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
+# Restart Waybar
+bind = $mainMod, W, exec, pkill waybar && waybar &
+
 # Example special workspace (scratchpad)
 bind = $mainMod, grave, togglespecialworkspace, magic
 bind = $mainMod SHIFT, grave, movetoworkspace, special:magic
