--- a/hyprland-xps-old/.config/hypr/config.d/bind.conf
+++ b/hyprland-xps-old/.config/hypr/config.d/bind.conf
@@ -45,6 +45,9 @@ bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
+# Full screen
+bind = $mainMod SHIFT, F, fullscreen, 0
+
 # Example special workspace (scratchpad)
 bind = $mainMod, grave, togglespecialworkspace, magic
 bind = $mainMod SHIFT, grave, movetoworkspace, special:magic
@@ -68,4 +71,12 @@ bind = $SUPER_SHIFT, l, exec, hyprlock
 bind = $mainMod ALT, B, exec, ~/.local/bin/record-screen.sh # Record region (no sound)
 bind = $mainMod CTRL, B, exec, ~/.local/bin/record-screen.sh --fullscreen # [hidden] Record screen (no sound)
 bind = $mainMod SHIFT, B, exec, ~/.local/bin/record-screen.sh --fullscreen-sound # [hidden] Record screen (with sound)
+
+# brightness and volume Fn controls
+bind = ,XF86AudioLowerVolume, exec, pactl -- set-sink-volume 0 -10%
+bind = ,XF86AudioRaiseVolume, exec, pactl -- set-sink-volume 0 +10%
+bind = ,XF86AudioMute, exec, pactl -- set-sink-mute 0 toggle
+bind = ,XF86AudioMicMute, exec, pactl -- set-source-mute 0 toggle
+bind = ,XF86MonBrightnessDown, exec, brightnessctl s 5%-
+bind = ,XF86MonBrightnessUp, exec, brightnessctl s +5%
 
