--- a/hyprland-xps-old/.config/hypr/config.d/option.conf
+++ b/hyprland-xps-old/.config/hypr/config.d/option.conf
@@ -114,11 +114,12 @@ misc {
 
 # https://wiki.hyprland.org/Configuring/Variables/#input
 input {
-    kb_layout = gb
+    kb_layout = gb,us
     kb_variant =
     kb_model =
     kb_options =
     kb_rules =
+    kb_options = grp:win_space_toggle
 
     follow_mouse = 1
 
