--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -3,7 +3,7 @@ background_opacity 0.8
 
 
 # BEGIN_KITTY_FONTS
-font_family      family="JetBrainsMono Nerd Font"
+font_family      family="JetBrainsMonoNL Nerd Font Mono"
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
