--- a/pipewire/.config/pipewire/pipewire.conf.d/99-custom-sinks.conf
+++ b/pipewire/.config/pipewire/pipewire.conf.d/99-custom-sinks.conf
@@ -1,4 +1,16 @@
 context.objects = [
+    {   # NULL Audio device
+        factory = adapter
+        args = {
+            factory.name = support.null-audio-sink
+            node.name = "null_sink"
+            node.description = "Null Audio"
+            media.class = Audio/Sink
+            audio.position = [ FL FR ]
+            monitor.channel-volumes = false
+            monitor.passthrough = true
+        }
+    }
     {   # Games Audio
         factory = adapter
         args = {
