--- a/hyprland-xps-old/.config/hypr/config.d/bind.conf
+++ b/hyprland-xps-old/.config/hypr/config.d/bind.conf
@@ -8,12 +8,15 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, return, exec, $terminal
 bind = $mainMod, C, killactive,
-bind = $mainMod, M, exit,
+bind = $mainMod SHIFT, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
+
+# Full screen
+bind = $mainMod SHIFT, F, fullscreen, 0
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
@@ -45,8 +48,8 @@ bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
-# Full screen
-bind = $mainMod SHIFT, F, fullscreen, 0
+# Restart Waybar
+bind = $mainMod, W, exec, pkill waybar && waybar &
 
 # Example special workspace (scratchpad)
 bind = $mainMod, grave, togglespecialworkspace, magic
@@ -72,11 +75,7 @@ bind = $mainMod ALT, B, exec, ~/.local/bin/record-screen.sh # Record region (no 
 bind = $mainMod CTRL, B, exec, ~/.local/bin/record-screen.sh --fullscreen # [hidden] Record screen (no sound)
 bind = $mainMod SHIFT, B, exec, ~/.local/bin/record-screen.sh --fullscreen-sound # [hidden] Record screen (with sound)
 
-# brightness and volume Fn controls
-bind = ,XF86AudioLowerVolume, exec, pactl -- set-sink-volume 0 -10%
-bind = ,XF86AudioRaiseVolume, exec, pactl -- set-sink-volume 0 +10%
-bind = ,XF86AudioMute, exec, pactl -- set-sink-mute 0 toggle
-bind = ,XF86AudioMicMute, exec, pactl -- set-source-mute 0 toggle
-bind = ,XF86MonBrightnessDown, exec, brightnessctl s 5%-
-bind = ,XF86MonBrightnessUp, exec, brightnessctl s +5%
-
+# Gaming
+bind = $mainMod, G, exec, steam
+bind = $mainMod, B, exec, lutris
+bind = $mainMod, H, exec, heroic
