audio changes from laptop-old

--- a/pipewire/.config/pipewire/pipewire.conf.d/99-custom-sinks.conf
+++ b/pipewire/.config/pipewire/pipewire.conf.d/99-custom-sinks.conf
@@ -133,9 +133,9 @@ context.modules = [
                         label = ldmx_stereo
                         control = {
                             # Threshold - where compression starts
-                            "Threshold (dB)" = -19.6323528289795
+                            "Threshold (dB)" = -12.0
                             # Output - final output level
-                            "Output (dB)" = -13.235294342041
+                            "Output (dB)" = -2.0
                             # Inter-Sample Peaks - 0=off, 1=on
                             "Inter-Sample Peaks" = 0
                         }
