--- a/hyprland-xps-old/.config/hypr/config.d/bind.conf
+++ b/hyprland-xps-old/.config/hypr/config.d/bind.conf
@@ -79,3 +79,15 @@ bind = $mainMod SHIFT, B, exec, ~/.local/bin/record-screen.sh --fullscreen-sound
 bind = $mainMod, G, exec, steam
 bind = $mainMod, B, exec, lutris
 bind = $mainMod, H, exec, heroic
+
+# Brightness and Media Keys
+bind = , XF86MonBrightnessUp, exec, brightnessctl set +5%
+bind = , XF86MonBrightnessDown, exec, brightnessctl set 5%-
+bind = , XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
+bind = , XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
+bind = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+bind = , XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
+bind = , XF86AudioPlay, exec, playerctl play-pause
+bind = , XF86AudioPause, exec, playerctl play-pause
+bind = , XF86AudioNext, exec, playerctl next
+bind = , XF86AudioPrev, exec, playerctl previous
