--- a/hyprland/.config/hypr/config.d/window-rule.conf
+++ b/hyprland/.config/hypr/config.d/window-rule.conf
@@ -26,6 +26,14 @@ windowrule = suppressevent maximize, class:.*
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
 
 ##############################
+### DEV FIXES
+##############################
+
+# Fix the cursor pop up dialog
+windowrulev2 = center, class:^(Cursor)$, title:^(Cursor)$, floating:1
+
+
+##############################
 ### POPUP/DIALOG FIXES ###
 ##############################
 
