Carla window rule, non-exclusive qpwgraph, 8bit VENV env value

--- a/hyprland/.config/hypr/config.d/window-rule.conf
+++ b/hyprland/.config/hypr/config.d/window-rule.conf
@@ -56,6 +56,13 @@ windowrulev2 = size 60% 70%, class:^(Xdg-desktop-portal-gtk)$, title:^(Save As)$
 windowrulev2 = size 60% 70%, class:^(Xdg-desktop-portal-gtk)$, title:^(Select.*File)$
 windowrulev2 = size 60% 70%, class:^(Xdg-desktop-portal-gtk)$, title:^(Select.*Folder)$
 
+
+# Carla fixes
+windowrulev2 = float, class:^(carla)$, title:^(Carla - .*\.carxp)$
+windowrulev2 = center, class:^(carla)$, title:^(Carla - .*\.carxp)$
+windowrulev2 = size 85% 90%, class:^(carla)$, title:^(Carla - .*\.carxp)$
+windowrulev2 = workspace 10, class:^(carla)$, title:^(Carla - .*\.carxp)$
+
 ##############################
 ### WORKSPACE RULES ###
 ##############################
@@ -106,4 +113,3 @@ windowrulev2 = workspace 2, class:^(steam_app_default)$, title:^(Battle\.net Log
 windowrulev2 = immediate, class:^(steam_app_)(.*)$, title:negative:^(Battle\.net|Battle\.net Login|)$
 windowrulev2 = fullscreen, class:^(steam_app_)(.*)$, title:negative:^(Battle\.net|Battle\.net Login|)$
 windowrulev2 = workspace 1, class:^(steam_app_)(.*)$, title:negative:^(Battle\.net|Battle\.net Login|)$
-
